# EMSim

./: .gitignore  .gitmodules  .gitreview  .gitsubprojects  AUTHORS.txt  CMakeLists.txt  CONTRIBUTING.md  DockerfileAppImage  README.md
.github/workflows/: run-tests.yml
apps/: CMakeLists.txt  main.cpp
apps/emsimLFP/: CMakeLists.txt  main.cpp
apps/emsimVSD/: CMakeLists.txt  main.cpp
emSim/: AttenuationCurve.cpp  AttenuationCurve.h  CMakeLists.txt  Events.cpp  Events.h  EventsLoader.cpp  EventsLoader.h  SamplePoints.cpp  SamplePoints.h  VSDLoader.cpp  VSDLoader.h  Volume.cpp  Volume.h  helpers.h
emSim/ispc/: ComputeSamplePoints.ispc  ComputeVolume.ispc  tasksys.cpp
packaging/AppImage/: README
packaging/AppImage/config/: AppRun  emsim.desktop
tests/: CMakeLists.txt  eventsLoader.cpp  samplePoints.cpp  volume.cpp
tests/data/: AllCompartments_SONATA.h5  AllCompartments_bin.bbp  BlueConfig  user.target
